# Datalog-Compiler

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  EOF_TypeAutomaton.cpp  EOF_TypeAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Left_ParenAutomaton.cpp  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  (+25 more)
Lab2PassOffCases/2-100/: answer0.txt  input0.txt
Lab2PassOffCases/2-80/: answer0.txt  answer1.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
Lab3PassOffCases/3-100/: answer5.txt  answer6.txt  answer9.txt  input5.txt  input6.txt  input9.txt
Lab3PassOffCases/3-80/: answer0.txt  answer1.txt  answer2.txt  answer3.txt  answer4.txt  answer7.txt  answer8.txt  input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input7.txt  input8.txt
Lab4PassOffCases/4-100/: answer1.txt  answer2.txt  answer3.txt  answer5.txt  answer6.txt  answer7.txt  answer8.txt  input1.txt  input2.txt  input3.txt  input5.txt  input6.txt  input7.txt  input8.txt
Lab4PassOffCases/4-80/: input0.txt  (+15 more)
